syntax = "proto2";

//Mensagem enviada pelo cliente
//Transporta como informação todos as teclas
//De direção que foram direcionadas

message client{
    required uint64 key         = 1;
    required uint64 instruction = 2;
}

message UniverseData{
    required bytes  Planets = 1;
    required bytes  Ships   = 2;
    required bytes  Trash   = 3;
    required double myPlanet= 4;
}

message SimplifiedUniverseData{
    required bytes  planetTrashCount    = 1;
    required bytes  trashPerShip        = 2;
    required double freeTrash           = 3;
    required double maxTrash            = 4;
}

//============Client/server connections and moves===================
enum ClientMessageType {
    CONNECT = 0;
    DISCONNECT = 1;
    MOVE = 2;
}

enum ServerMessageType {
    OK = 0;
    ERROR = 1;
}

//client sends a message with type (connect/disconnect/move)
//when connecting, id doesnt matter. when disconnecting/moving, 
//it should send the id it received from the server when it connected

//connect message -> type = CONNECT, id doesnt matter
//server response -> type = OK, random ID (should be stored)

//disconnect message -> type = DISCONNECT, id = stored id from server
//server response -> type = OK, id doesnt matter

//move message -> type = MOVE, id = stored id from server, keys = keys pressed
//server response -> type = OK, id doesnt matter

//if server errors any time it just sends a message with type = ERROR

message ClientMessage {
    required ClientMessageType msg_type = 1;
    required string id = 2; //we need this for when the client disconnects
    
    //bools for each key, 2 bools per key (down and up)
    required bool   wKeyDown    = 3;
    required bool   aKeyDown    = 4;
    required bool   sKeyDown    = 5;
    required bool   dKeyDown    = 6;
    required bool   wKeyUp      = 7;
    required bool   aKeyUp      = 8;
    required bool   sKeyUp      = 9;
    required bool   dKeyUp      = 10;
}

//servidor responde com OK/ERROR e o id da nave de volta
message ServerMessage {
    required ServerMessageType msg_type = 1;
    required string id = 2;
}